[tool.poetry]
name = "supervision-demo"
version = "0.1.0"
description = ""
authors = ["deight93 <deight8311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
ultralytics = "^8.3.40"
supervision = "^0.24.0"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
